[gd_scene load_steps=28 format=3 uid="uid://cvs25thdh37v7"]

[ext_resource type="Texture2D" uid="uid://taxbtjwytfqj" path="res://art/256px/PlayerShadow_Frame_01_png_processed.png" id="1_g6k8r"]
[ext_resource type="Script" uid="uid://drereuwp4bb84" path="res://player/player.gd" id="1_yllr7"]
[ext_resource type="Texture2D" uid="uid://b4o4fnjvvcb8n" path="res://art/256px/PlayerShadow_Frame_02_png_processed.png" id="2_boad6"]
[ext_resource type="PackedScene" uid="uid://cjerxfj0r8uut" path="res://projectile/projectile.tscn" id="2_s7qer"]
[ext_resource type="Texture2D" uid="uid://dak65ui8gx2md" path="res://art/256px/PlayerShadow_Frame_03_png_processed.png" id="3_rgyib"]
[ext_resource type="Texture2D" uid="uid://0qk5udpsbc22" path="res://art/256px/Exhaust_Frame_01_png_processed.png" id="4_ebec5"]
[ext_resource type="Texture2D" uid="uid://cmlwbfdprmuah" path="res://art/256px/PlayerRed_Frame_01_png_processed.png" id="4_hg6s5"]
[ext_resource type="Texture2D" uid="uid://bt6e0firy4akj" path="res://art/256px/PlayerRed_Frame_02_png_processed.png" id="5_8t03j"]
[ext_resource type="Texture2D" uid="uid://bo3ntxbmbx82p" path="res://art/256px/Exhaust_Frame_02_png_processed.png" id="5_yllr7"]
[ext_resource type="Texture2D" uid="uid://dhfxyifb7nayg" path="res://art/256px/PlayerRed_Frame_03_png_processed.png" id="6_2ieo8"]
[ext_resource type="Texture2D" uid="uid://c557wr7al1oos" path="res://art/256px/Exhaust_Frame_03_png_processed.png" id="6_kb6p2"]
[ext_resource type="Texture2D" uid="uid://boyb8a5in2kqu" path="res://art/256px/Exhaust_Frame_04_png_processed.png" id="7_wodsf"]
[ext_resource type="Texture2D" uid="uid://bbv1rd1oy3q7j" path="res://art/256px/Exhaust_Frame_05_png_processed.png" id="8_32hag"]
[ext_resource type="Texture2D" uid="uid://c6xp5am5fne7m" path="res://art/256px/Exhaust_Frame_06_png_processed.png" id="9_tqiix"]
[ext_resource type="Texture2D" uid="uid://berdanpfpt32j" path="res://art/256px/Explosion01_Frame_01_png_processed.png" id="14_bjvpn"]
[ext_resource type="Texture2D" uid="uid://cmwjl5oeo2ri4" path="res://art/256px/Explosion01_Frame_02_png_processed.png" id="15_s7qer"]
[ext_resource type="Texture2D" uid="uid://ctjqyk5tfx6ma" path="res://art/256px/Explosion01_Frame_03_png_processed.png" id="16_g4c7l"]
[ext_resource type="Texture2D" uid="uid://b28nxn6m153iv" path="res://art/256px/Explosion01_Frame_04_png_processed.png" id="17_knn7v"]
[ext_resource type="Texture2D" uid="uid://ba2igmnckofj2" path="res://art/256px/Explosion01_Frame_05_png_processed.png" id="18_7pqkx"]
[ext_resource type="Texture2D" uid="uid://bh4bsfh1hj0ae" path="res://art/256px/Explosion01_Frame_06_png_processed.png" id="19_uw77l"]
[ext_resource type="Texture2D" uid="uid://dg5x26ly3nmu0" path="res://art/256px/Explosion01_Frame_07_png_processed.png" id="20_rptt4"]
[ext_resource type="Texture2D" uid="uid://e50e4v1jvff6" path="res://art/256px/Explosion01_Frame_08_png_processed.png" id="21_r7pn3"]
[ext_resource type="Texture2D" uid="uid://uvfeh4ycmdsc" path="res://art/256px/Explosion01_Frame_09_png_processed.png" id="22_b8hi5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ebec5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_g6k8r")
}, {
"duration": 1.0,
"texture": ExtResource("2_boad6")
}, {
"duration": 1.0,
"texture": ExtResource("3_rgyib")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_e7oew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ebec5")
}, {
"duration": 1.0,
"texture": ExtResource("5_yllr7")
}, {
"duration": 1.0,
"texture": ExtResource("6_kb6p2")
}, {
"duration": 1.0,
"texture": ExtResource("7_wodsf")
}, {
"duration": 1.0,
"texture": ExtResource("8_32hag")
}, {
"duration": 1.0,
"texture": ExtResource("9_tqiix")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yllr7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hg6s5")
}, {
"duration": 1.0,
"texture": ExtResource("5_8t03j")
}, {
"duration": 1.0,
"texture": ExtResource("6_2ieo8")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2uvqg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_bjvpn")
}, {
"duration": 1.0,
"texture": ExtResource("15_s7qer")
}, {
"duration": 1.0,
"texture": ExtResource("16_g4c7l")
}, {
"duration": 1.0,
"texture": ExtResource("17_knn7v")
}, {
"duration": 1.0,
"texture": ExtResource("18_7pqkx")
}, {
"duration": 1.0,
"texture": ExtResource("19_uw77l")
}, {
"duration": 1.0,
"texture": ExtResource("20_rptt4")
}, {
"duration": 1.0,
"texture": ExtResource("21_r7pn3")
}, {
"duration": 1.0,
"texture": ExtResource("22_b8hi5")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource("1_yllr7")
ProjectileScene = ExtResource("2_s7qer")
metadata/_edit_group_ = true

[node name="Shadow" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 0)
sprite_frames = SubResource("SpriteFrames_ebec5")

[node name="Exhaust" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, 32)
sprite_frames = SubResource("SpriteFrames_e7oew")

[node name="Exhaust2" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 32)
sprite_frames = SubResource("SpriteFrames_e7oew")

[node name="Ship" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yllr7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -31, 4, -27, 11, -11, 13, -6, 19, -4, 19, 5, 29, 12, 26, 21, 17, 22, 13, 30, -12, 30, -17, 23, -26, 21, -29, 12, -20, 5, -20, -3, -13, -6, -11, -11, -4, -27)

[node name="Explosion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2uvqg")
frame = 7
frame_progress = 0.374753

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
